[gd_scene load_steps=9 format=3 uid="uid://duwiifqug7g3p"]

[ext_resource type="PackedScene" uid="uid://b41qbmh5ajyej" path="res://scenes/player.tscn" id="1_4jifl"]
[ext_resource type="Script" path="res://scenes/game.gd" id="1_yhib4"]
[ext_resource type="PackedScene" uid="uid://b3ypsumm8r1i6" path="res://scenes/hud.tscn" id="2_7g58g"]
[ext_resource type="PackedScene" uid="uid://b4mvwxht21dn8" path="res://scenes/asteroid.tscn" id="3_1y85n"]
[ext_resource type="PackedScene" uid="uid://bcun56n4p4ycq" path="res://scenes/game_over_screen.tscn" id="3_u83n4"]
[ext_resource type="PackedScene" uid="uid://cpks16ngn4yom" path="res://scenes/background_field.tscn" id="5_433ky"]
[ext_resource type="PackedScene" uid="uid://i7fmwocae0k3" path="res://scenes/game_spawn_area.tscn" id="6_vau8l"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_g6rcd"]
vertices = PackedVector2Array(1199, -27, 1226, 696, 1096, 691, 1043, 243, 985, -21, 771, 119, 430, 216, 207, 129, 84, 339, 80, 702, -50, 699, -29, -10, 13, -27)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(4, 0, 3, 5), PackedInt32Array(5, 3, 6, 7), PackedInt32Array(7, 6, 8), PackedInt32Array(8, 9, 10, 11), PackedInt32Array(7, 8, 11, 12)])
outlines = Array[PackedVector2Array]([PackedVector2Array(432, 226, 1034, 253, 1088, 701, 1237, 707, 1209, -38, 983, -31, 768, 109, 210, 119, 15, -39, -39, -17, -61, 709, 90, 713, 94, 346)])
source_geometry_group_name = &"navigation_polygon_source_group"

[node name="Game" type="Node2D"]
script = ExtResource("1_yhib4")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("2_7g58g")]
unique_name_in_owner = true

[node name="GameOverScreen" parent="UI" instance=ExtResource("3_u83n4")]
unique_name_in_owner = true
visible = false
offset_right = 0.0
offset_bottom = 0.0

[node name="BackgroundField" parent="." instance=ExtResource("5_433ky")]

[node name="Player" parent="." instance=ExtResource("1_4jifl")]
unique_name_in_owner = true
position = Vector2(576, 324)
scale = Vector2(0.7, 0.7)

[node name="PlayerSpawnPosition" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(576, 324)

[node name="GameSpawnArea" parent="PlayerSpawnPosition" instance=ExtResource("6_vau8l")]
unique_name_in_owner = true

[node name="Lasers" type="Node" parent="."]

[node name="Asteroids" type="Node" parent="."]
unique_name_in_owner = true

[node name="Asteroid4" parent="Asteroids" instance=ExtResource("3_1y85n")]
position = Vector2(1010, 182)

[node name="Asteroid3" parent="Asteroids" instance=ExtResource("3_1y85n")]
position = Vector2(341, 134)

[node name="Asteroid2" parent="Asteroids" instance=ExtResource("3_1y85n")]
position = Vector2(991, 527)

[node name="Asteroid" parent="Asteroids" instance=ExtResource("3_1y85n")]
position = Vector2(342, 399)

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="PathTopNavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_g6rcd")
constrain_avoidance = true
avoidance_layers = 6

[connection signal="laser_shot" from="Player" to="." method="_on_player_laser_shot"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
